--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
       <link rel="stylesheet" href="styles.css">
-      <script src="./index.js"></script>
   </head>
 <body>
     <header class="header">
@@ -27,5 +26,6 @@
           Created by <a href="">tammalee.dev</a> | using the <a href="https://pokeapi.co/">PokéAPI</a>
         </div>
       </footer>
+      <script src="index.js"></script>
 </body>
 </html>
